--- a/css/1920about.css
+++ b/css/1920about.css
@@ -79,6 +79,17 @@ a {
   margin: 0 auto;
 }
 
+.header {
+  position: absolute;
+  width: 100%;
+  padding: 1.823vw 2.604vw;
+  z-index: 10;
+}
+.header a .logo {
+  width: 204px;
+  height: auto;
+}
+
 .about {
   position: relative;
   padding: 115px 0 62px 0;
@@ -271,6 +282,8 @@ a {
   bottom: 0;
   left: 0;
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .charity .charity-axolots1 {
   position: absolute;
@@ -616,4 +629,276 @@ a {
 }
 .roadmap .roadmap__container #vr.step3 .roadmap__navigation .navigation__line .triangle3 {
   fill: #ff66c4;
+}
+
+.story {
+  height: 100vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.story::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(180deg, rgba(13, 75, 158, 0) 0%, #0d4b9e 100%);
+  width: 100%;
+  height: 309px;
+  z-index: 3;
+}
+.story .story-header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: auto;
+  z-index: 2;
+}
+.story .story-bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.story .story__container {
+  display: flex;
+  justify-content: space-between;
+  z-index: 2;
+}
+.story .story__container .story__left-block {
+  position: relative;
+  width: 651px;
+}
+.story .story__container .story__left-block .stone {
+  position: absolute;
+  left: -260px;
+  top: 110px;
+  width: 1042px;
+}
+.story .story__container .story__left-block .story__title {
+  font-family: "Wild World";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 68px;
+  color: #ffffff;
+}
+.story .story__container .story__left-block .story__title span {
+  color: #ff66c4;
+}
+.story .story__container .story__left-block .story__subtitle {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+  position: relative;
+  width: 315px;
+  display: block;
+  margin: 202px 0 0 240px;
+}
+.story .story__container .story__left-block .story__subtitle img {
+  width: 80px;
+  position: absolute;
+  bottom: -6px;
+  right: 86px;
+  transform: translateY(100%);
+}
+.story .story__container .story__right-block {
+  width: 557px;
+  height: 714px;
+  background-image: url(../img/about/story/scroll.png);
+  background-size: 100% 100%;
+  padding: 107px 35px 107px 52px;
+  position: relative;
+}
+.story .story__container .story__right-block::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 638.63px;
+  background: #59a3e4;
+  filter: blur(30px);
+  display: block;
+  z-index: -1;
+}
+.story .story__container .story__right-block img {
+  content: url(../img/about/story/superlotl.png);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%);
+  display: block;
+  width: 625px;
+  height: auto;
+  z-index: -2;
+}
+.story .story__container .story__right-block .description {
+  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
+  padding: 0 30px 0 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.story .story__container .story__right-block .description p {
+  display: block;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  color: #07031f;
+}
+.story .story__container .story__right-block .description::-webkit-scrollbar {
+  width: 4px;
+}
+.story .story__container .story__right-block .description::-webkit-scrollbar-track {
+  background-color: rgba(7, 3, 31, 0.1882352941);
+  border-radius: 8px;
+}
+.story .story__container .story__right-block .description::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px #07031f;
+  border-radius: 8px;
+}
+
+.footer {
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  flex-direction: column;
+  gap: 240px;
+  padding: 115px 0 60px 0;
+}
+.footer .footer-bg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+.footer .footer__container {
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer .footer__container .footer__left-block .footer__title {
+  font-family: "Wild World";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 68px;
+  color: #ffffff;
+  width: 834px;
+}
+.footer .footer__container .footer__left-block .footer__title img {
+  width: 536px;
+  height: auto;
+}
+.footer .footer__container .footer__left-block .footer__subtitle {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  letter-spacing: -0.02em;
+  color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0 0 0;
+  gap: 8px;
+}
+.footer .footer__container .footer__left-block .footer__subtitle a {
+  color: #ff66c4;
+}
+.footer .footer__container .footer__mail {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 38px;
+  line-height: 46px;
+  text-align: right;
+  letter-spacing: -0.02em;
+  color: #ff66c4;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  transform: translateY(-15%);
+}
+.footer .footer__container .footer__mail img {
+  width: 42.5px;
+  height: auto;
+}
+.footer .social__container {
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  bottom: 0;
+}
+.footer .social__container .social__left-block {
+  display: flex;
+  gap: 40px;
+}
+.footer .social__container .social__left-block span {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.footer .social__container .social__logo {
+  width: 174px;
+  height: auto;
+}
+.footer .social__container .social {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  gap: 20px;
+}
+.footer .social__container .social a {
+  text-decoration: none;
+}
+.footer .social__container .social a svg {
+  display: block;
+  width: 40px;
+  height: auto;
+}
+.footer .social__container .social a svg circle {
+  transition: 0.35s fill;
+}
+.footer .social__container .social a:hover svg circle {
+  fill: #ff66c4;
+}
+.footer .social__container .social a:hover svg path {
+  fill: #ffffff;
+}
+
+@media only screen and (min-aspect-ratio: 1920/860) and (min-width: 1201px) {
+  .about,
+.charity,
+.roadmap,
+.story {
+    height: 970px;
+  }
 }/*# sourceMappingURL=1920about.css.map */
