--- a/css/1920about.scss
+++ b/css/1920about.scss
@@ -3,7 +3,7 @@
     transform: translateY(0);
   }
   50% {
-    transform: translateY(2.344vw);
+    transform: translateY(14.5%);
   }
   100% {
     transform: translateY(0);
@@ -205,20 +205,18 @@ a {
                 font-weight: 600;
                 font-size: 0.677vw;
                 line-height: 1.146vw;
-                display: flex;
-                align-items: flex-end;
                 letter-spacing: -0.02em;
                 color: #ffffff;
                 z-index: 1;
-                transition: 0.35s transform;
-                transform-origin: bottom;
+                transition: 0.35s transform, .35s;
+                margin: auto 0 0 0;
+                transform-origin: bottom left;
               }
               &.active {
                 width: 8.958vw;
                 height: 8.958vw;
                 span {
                   transform: scale(1.23);
-                  transform-origin: bottom;
                 }
               }
             }
@@ -362,7 +360,6 @@ a {
         width: 4.531vw;
         height: auto;
         mix-blend-mode: exclusion;
-        border-radius: 0.521vw;
         z-index: 25;
       }
       .mask {
